2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* preferences.c (read_wptype_from_string): Do not crash on NULL
	(read_orientation_from_string): Ditto

	* applier.c (bg_applier_dispose): Replace deprecated methods
	(draw_disabled_message): Use gtk_image instead of gtk_pixmap,
	replace deprecated methods
	(render_wallpaper): Replace deprecated methods

2002-01-13  Seth Nickell  <snickell@stanford.edu>

	reviewed by: <delete if not using a buddy>

	* Makefile.am:
	* applier.c: (bg_applier_apply_prefs),
	(bg_applier_get_preview_widget), (draw_disabled_message),
	(create_pixmap), (get_geometry):
	* preferences.c: (bg_preferences_load),
	(bg_preferences_merge_entry), (read_wptype_from_string),
	(read_orientation_from_string):
	* preferences.h:

2002-01-28  Richard Hestilow  <hestilow@ximian.com>

	* Makefile.am: Use libtool to create the static library, thus
	allowing shlibs to link to libbackground (needed for metatheme).

2002-01-10  Bradford Hovinen  <hovinen@ximian.com>

	Courtesy of Jean Schurger <jschurger@schurger.org>:
	* preferences.c (bg_preferences_merge_entry): Make sure the
	wallpaper filename is non-NULL before doing anything with it

2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* applier.c (bg_applier_apply_prefs): Disable the wallpaper if we
	couldn't load it
	(bg_applier_apply_prefs): Create a clone of the preferences
	structure first and work off of that
	(wallpaper_full_cover_p): Return FALSE if the wallpaper pixbuf is NULL

	* preferences.c (bg_preferences_merge_entry): Don't actually set
	the wallpaper to "enabled" unless we can load the thing

	* applier.c: Eliminate compiler warnings

	* applier.[ch]: Rename applier to bg_applier to avoid possible
	namespace collision

	* preferences.[ch]: Rename preferences to bg_preferences to avoid
	possible namespace collision

2001-12-18  Bradford Hovinen  <hovinen@ximian.com>

	* preferences.c: Update GConf keys to use /desktop/gnome/background